# FusionClima

./: .gitignore  .gitmodules  FusionClima.ino  README.md  algorithm_chuva.cpp  algorithm_chuva.h  as_client.cpp  as_client.h  as_host.cpp  as_host.h  async.cpp  async.h  battery.cpp  battery.h  benchmark.cpp  benchmark.h  button.cpp  button.h  calculador.cpp  calculador.h  cpu_taskmanager.cpp  cpu_taskmanager.h  cpu_timed.cpp  cpu_timed.h  cpu_tools.cpp  cpu_tools.h  cpuctl.cpp  cpuctl.h  debug_wrapper.cpp  debug_wrapper.h  display.cpp  display.h  display_bitmaps.h  displayer.cpp  displayer.h  easybattery.cpp  easybattery.h  lora.cpp  lora.h  main.ino  (+14 more)
__random_stuff_do_not_open/: battery.cpp  battery.h  button.cpp  button.h  calc.cpp  calc.h  data.cpp  data.h  dhtmeasure.cpp  dhtmeasure.h  displaying.cpp  displaying.h  main_2.1_final.ino  mylora.cpp  mylora.h  tools.cpp  tools.h
app/: Source.cpp  app.sln  app.vcxproj  app.vcxproj.filters
app_old/: Source.cpp  app.sln  app.vcxproj  app.vcxproj.filters
extra/: extra.sln
fc/: as_dongle.cpp  as_dongle.h  as_monitor.cpp  as_monitor.h  fc.ino  protocol_combo.h  references.h
fc - Copia/: as_monitor.cpp  protocol_combo.cpp  protocol_combo.h
main/: CMakeLists.txt  as_client.cpp  as_host.cpp  main.cpp  main_shared.h  references.txt
main/shared/: DHT.cpp  DHT.h  buttons.cpp  buttons.h  cpuctl.cpp  cpuctl.h  display.cpp  display.h  tools.h  wifictl.cpp  wifictl.h
main/shared/_trashed/: DHT22.cpp  DHT22.h
main/shared/import/: DHT.cpp  DHT.h  LoRa.cpp  LoRa.h  dns_server.c  dns_server.cpp
standalone/: dump.txt
(+49 files in other folders)
